--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
-            android:name=".ui.WelcomeActivity"
+            android:name=".ui.TermsActivity"
             android:label="Home" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +24,10 @@
         <activity
             android:name=".ui.LoginActivity"
             android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/title_activity_main" >
         </activity>
     </application>
 
